[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "coverage>=7.2.7",
    "black>=23.3.0",
    "mypy>=1.4.1",
    "pytest-coverage>=0.0",
    "mkdocs>=1.2.4",
    "importlib-metadata>=4.3",
    "ruff>=0.0.276",
    "mkdocs-material>=9.1.18",
    "isort>=5.11.5",
    "mkdocstrings[python]>=0.22.0",
]

[project]
name = "soundevent"
version = "0.1.0"
description = "soundevent is an open-source Python package for the computational biocoustic community, providing standardized tools for sound event analysis and data management."
authors = [
    {name = "Santiago Martinez", email = "santiago.balvanera.20@ucl.ac.uk"},
]
dependencies = []
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 79
