[project]
name = "soundevent"
version = "2.3.0"
description = "soundevent is an open-source Python package for the computational biocoustic community, providing standardized tools for sound event analysis and data management."
authors = [
  { name = "Santiago Martinez", email = "santiago.balvanera.20@ucl.ac.uk" },
]
dependencies = ["pydantic>=2.0", "email-validator>=2.0"]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
plot = ["matplotlib>=3.7.3"]
audio = [
  "scipy>=1.6.1",
  "xarray>=0.20.2",
  "cython>=0.29.36",
  "soundfile>=0.12.1",
]
evaluation = ["scikit-learn>=1.3.2"]
geometry = [
 "rasterio>=1.3.10",
 "shapely>=2.0.6",
 "xarray>=2023.1.0",
]
crowsetta = ["crowsetta>=4.0.0.post2,<5.0", "pandera<0.20", "numpy<2.0"]
all = [
  "soundevent[plot]",
  "soundevent[audio]",
  "soundevent[evaluation]",
  "soundevent[geometry]",
  "soundevent[crowsetta]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "icecream>=2.1.3",
  "pytest>=7.4.0",
  "coverage[toml]>=7.3.2",
  "pytest-coverage>=0.0",
  "mkdocs>=1.2.4",
  "importlib-metadata>=4.3",
  "ruff>=0.0.276",
  "mkdocs-material>=9.1.18",
  "isort>=5.11.5",
  "mkdocstrings[python]>=0.22.0",
  "tox>=4.6.3",
  "hypothesis>=6.79.4",
  "mkdocs-gallery>=0.7.8",
  "memory-profiler>=0.61.0",
  "pytest-watch>=4.2.0",
  "html5lib>=1.1",
  "pyright>=1.1.366",
  "pytest-xdist>=3.6.1",
  "ipykernel>=6.29.4",
]

[tool.pytest.ini_options]
addopts = "-vv"

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "I", "D"]
ignore = ["D1"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-local-folder = ["src", "soundevent"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]
verboseOutput = true
pythonVersion = "3.9"
pythonPlatform = "All"

[tool.coverage.run]
branch = true
source = ["src/soundevent"]
command_line = "-m pytest"
omit = ["src/soundevent/plot/*"]
